BT54 Finalising Your Class Code

--- a/BattleTank/Config/DefaultGame.ini
+++ b/BattleTank/Config/DefaultGame.ini
@@ -1,2 +1,4 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=5DDCBB994420C017FE14E7B424A61178
+CopyrightNotice=Copyright Ivanov Andrey.
+
